# FlashVLM

./: .gitignore  README.md  pyproject.toml
flashvlm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
llava/: pyproject.toml
llava/model/: builder.py
llava/model/language_model/: llava_qwen.py  llava_qwen_moe.py
llava/model/multimodal_encoder/: siglip_encoder.py
llava/model/multimodal_resampler/: qformer.py
lmms-eval/docs/advanced/: throughput_metrics.md
lmms-eval/lmms_eval/: utils.py
lmms-eval/lmms_eval/models/chat/: huggingface.py  llava_hf.py  qwen3_vl.py
lmms-eval/lmms_eval/models/model_utils/: gen_metrics.py
lmms-eval/lmms_eval/models/simple/: llava_hf.py  llava_vid.py  qwen3_vl.py
lmms-eval/skills/lmms-eval-guide/references/: workflows.md
method/: __init__.py
method/fastv/: __init__.py  modeling_qwen3_vl.py
method/fastv/models/: __init__.py  qwen3_vl.py
method/flashvid/: __init__.py  flashvid.py  modeling_qwen3_vl.py
method/flashvlm/: __init__.py  modeling_qwen3_vl.py  sa_kv.py  utils.py
method/holitom/: __init__.py  modeling_qwen3_vl.py
method/vidcom2/: __init__.py  modeling_qwen3_vl.py  vidcom2.py
method/visionzip/: __init__.py  modeling_qwen3_vl.py
playground/: qwen3_vl.py
profiling/: README.md  qwen3_vl_advanced_profile.py
scripts/baseline/: llava_ov.sh  llava_vid.sh  qwen2_5_vl.sh  qwen3_vl.sh
scripts/fastv/: qwen3_vl.sh
scripts/flashvid/: qwen3_vl.sh
scripts/flashvlm/: qwen2_5_vl.sh  qwen3_vl.sh
scripts/holitom/: qwen3_vl.sh
scripts/vidcom2/: qwen3_vl.sh
scripts/visionzip/: qwen3_vl.sh
