[project]
name = "flashvlm"
version = "0.1.0"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12,<3.13"
dependencies = []

[dependency-groups]
base = [
    "torch==2.9.*",
    "ninja",
    "lmms-eval>=0.7.0",
]
qwen = [
    { include-group = "base" },
    "transformers==5.2.0",
]
llava = [
    { include-group = "base" },
    "transformers==4.57.3",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["method*", "llava*"]
