[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flashvlm"
version = "0.1.0"
description = "FlashVLM methods and evaluation environment"
requires-python = ">=3.10"
dependencies = [
    "torch==2.8.*",
    "decord",
    "qwen-vl-utils>=0.0.14",
]

[project.optional-dependencies]
qwen = [
    "transformers==5.2.0",
]
llava = [
    "transformers==4.57.3",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["llava*", "method*"]
namespaces = true
